# qwentastic

./: README.md  pyproject.toml
.github/workflows/: publish.yml
qwen_package/: __init__.py  example.py
qwentastic/: __init__.py  core.py  example.py
